r27 (25. 08. 2021):
Fixed a crash when waypoints are still visible during heist restart/termination
Fixed an issue where a few icons in waypoints are corrupted/malformed
The Big Bank: Fixed waypoint position issue when timelock is counting down

r26 (24. 08. 2021):
Added waypoint option for "Pager Callback Timers"
Added waypoint option for "Timers"
Rewrote waypoint system for better speed and extensibility
Fixed an issue where time trackers are not updated if certain HUD mods are installed (client only)
Henry's Rock: Fixed an issue where trackers for computers were removed when they were powered off by enemies

r25 (18. 08. 2021):
Removed Offshore Spend tracker as the event ended
Fixed an issue where some trackers did not behave correctly
Dragon Heist: Fixed a crash when Escape sequence is initiated
First World Bank: Fixed an issue where achievement tracker "Federal Assurance" showed when no Bulldozer spawned
The White House: Fixed a crash where teargas is activated

r24 (13. 08. 2021):
Offshore Spend Tracker: Improved formatting
Goat Simulator Day 2: Fixed a crash when pilot missed the cage

r23 (12. 08. 2021):
Added Offshore Spend tracker for weapon "Cash Blaster"
Fixed an issue where PC Hack in Undercover did not update the tracker
Dragon Heist: Fixed an issue where escape vehicle tracker is not accurate on host
Transport: Train Heist: Fixed an issue where traincard hacking did not hide after alarm went off

r22 (07. 08. 2021):
Improved time accuracy of drills and saws
Fixed a crash on The White House or Buluc's Mansion when "Show Timers" option is disabled

r21 (04. 08. 2021):
Added Waypoints
Added trackers for ECM Jammer and ECM Feedback
Added "Aggregate All Deployables" tracker
Added moving animation for trackers
Added fade in animation for new trackers
Added fade out animation for trackers that are going to be deleted
Added trackers for Crime and Punishment custom heist
All Holdout maps (Vanilla and custom) should be supported out of the box